Created the home page text content.

--- a/index.html
+++ b/index.html
@@ -29,17 +29,24 @@
     
             <nav>
                 <ul id="primary-navigation"  class="primary-navigation" >
-                    <li class="nav-item"><a id="nav-link" class="nav-link" href="#about-Page">Infor-page</a></li>
-                    <li class="nav-item"><a id="nav-link2" class="nav-link" href="#projects-Page">PROJECTS</a></li>
-                    <li class="nav-item"><a id="nav-link3" class="nav-link" href="#testimonials-Page">TESTIMONIALS</a></li>
+                    <li class="nav-item"><a id="nav-link" class="nav-link" href="#info-Page">INFORMATION</a></li>
+                    <li class="nav-item"><a id="nav-link2" class="nav-link" href="#logging-Page">LOGGING</a></li>
+                    <li class="nav-item"><a id="nav-link3" class="nav-link" href="#tips-Page">TIPS</a></li>
                 </ul>
             </nav>
         </div>
     </header> 
 
     <main style="position: relative">
-        <section id="firstPage" class="firstPage pageSection">
-            firstPage
+        <section id="homePage" class="homePage pageSection">
+            <div class="home-page-main-text">
+                <h1 class="home-page-heading">Footprint Logger</h1>
+                <p>Track your daily impact.</p>
+                <p>Reduce your carbon footprint.</p>
+                <a href="#logging-Page">
+                    <button>Start Logging</button>
+                </a>
+            </div>
         </section>
 
         <section id="info-Page" class="info-Page pageSection">
