Working on the home page.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
     <main style="position: relative">
         <section id="homePage" class="homePage pageSection">
             <div class="home-page-main-text">
-                <h1 class="home-page-heading">Footprint Logger</h1>
+                <div class="home-page-heading">
+                    <h1>Footprint</h1>
+                    <h1>Logger</h1>
+                </div>
                 <p>Track your daily impact.</p>
                 <p>Reduce your carbon footprint.</p>
                 <a href="#logging-Page">
