--- a/index.html
+++ b/index.html
@@ -66,7 +66,25 @@
     </main>
 
     <footer class="footer">
-        footer
+        <img class="footer-hero-image" src="Images/sustainability-hero.jpeg" alt="sustainability-hero image">
+        <div>
+            <h2>Powered By</h2>
+            <a target="_blank" href="https://developer.ticketmaster.com/">
+                <img src="./IMAGES/tm-developer-logo.svg" alt="">
+            </a>
+        </div>
+        
+        <!-- <div class="footer-icons">
+            <a target="_blank" href="https://github.com/DiksonIvySon">
+                <i class="fa-brands fa-github"></i>
+            </a>
+            <a target="_blank" href="https://www.linkedin.com/in/dikson-manganye-a8b773213/">
+                <i class="fa-brands fa-linkedin-in"></i>
+            </a>
+        </div> -->
+        <p class="copy-right-container">
+            Copyright © 2025 <a target="_blank" href="https://diksonivyson.github.io/My_Portfolio/" class="web-author">Dikson Manganye</a>. All rights reserved
+        </p>
     </footer>
 </body>
 </html>
