Added more content to the footer.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header> 
 
     <main style="position: relative">
-        <section id="homePage" class="homePage pageSection">
+        <section id="home-Page" class="homePage pageSection">
             <div class="home-page-main-text">
                 <div class="home-page-heading">
                     <h1>Footprint</h1>
@@ -67,21 +67,54 @@
 
     <footer class="footer">
         <img class="footer-hero-image" src="Images/sustainability-hero.jpeg" alt="sustainability-hero image">
-        <div>
-            <h2>Powered By</h2>
-            <a target="_blank" href="https://developer.ticketmaster.com/">
-                <img src="./IMAGES/tm-developer-logo.svg" alt="">
-            </a>
+
+        <div class="container">
+           
+            <div>
+                <h2>Powered By</h2>
+                <a target="_blank" href="">
+                    <img src="" alt="">
+                </a>
+            </div>
+
+            <div c lass="footer-links">
+                <h2 class="site-footer-title mb-3">Resources</h2>
+
+                <ul class="site-footer-links">
+                    <li class="site-footer-link-item">
+                        <a href="#home-Page" class="site-footer-link">Home</a>
+                    </li>
+
+                    <li class="site-footer-link-item">
+                        <a href="#info-Page" class="site-footer-link">INFORMATION</a>
+                    </li>
+
+                    <li class="site-footer-link-item">
+                        <a href="#logging-Page" class="site-footer-link">LOGGING</a>
+                    </li>
+
+                    <li class="site-footer-link-item">
+                        <a href="#tips-Page" class="site-footer-link">TIPS</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Website Developer</button>
+
+                <ul class="dropdown-menu">
+                    <li><a href="https://www.linkedin.com/in/dikson-manganye-a8b773213/" target="_blank" class="dropdown-item" >linkedin</a></li>
+
+                    <li><a href="https://diksonivyson.github.io/My_Portfolio/" target="_blank" class="dropdown-item" >Portfolio</a></li>
+
+                    <li><a href="https://github.com/DiksonIvySon" target="_blank" class="dropdown-item" >Github</a></li>
+
+                    <li><a href="mailto: diksonmanganye179@gmail.com" target="_blank" class="dropdown-item" >Email</a></li>
+                </ul>
+            </div>    
         </div>
         
-        <!-- <div class="footer-icons">
-            <a target="_blank" href="https://github.com/DiksonIvySon">
-                <i class="fa-brands fa-github"></i>
-            </a>
-            <a target="_blank" href="https://www.linkedin.com/in/dikson-manganye-a8b773213/">
-                <i class="fa-brands fa-linkedin-in"></i>
-            </a>
-        </div> -->
         <p class="copy-right-container">
             Copyright © 2025 <a target="_blank" href="https://diksonivyson.github.io/My_Portfolio/" class="web-author">Dikson Manganye</a>. All rights reserved
         </p>
