Clean up un-used code.

--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
                 </a>
             </div>
 
-            <div c lass="footer-links">
+            <div class="footer-links">
                 <h2 class="site-footer-title mb-3">Resources</h2>
 
                 <ul class="site-footer-links">
                     <li class="site-footer-link-item">
-                        <a href="#home-Page" class="site-footer-link">Home</a>
+                        <a href="#home-Page" class="site-footer-link">HOME</a>
                     </li>
 
                     <li class="site-footer-link-item">
@@ -98,21 +98,20 @@
                     </li>
                 </ul>
             </div>
-
+            
             <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Website Developer</button>
-
-                <ul class="dropdown-menu">
-                    <li><a href="https://www.linkedin.com/in/dikson-manganye-a8b773213/" target="_blank" class="dropdown-item" >linkedin</a></li>
-
-                    <li><a href="https://diksonivyson.github.io/My_Portfolio/" target="_blank" class="dropdown-item" >Portfolio</a></li>
-
-                    <li><a href="https://github.com/DiksonIvySon" target="_blank" class="dropdown-item" >Github</a></li>
-
-                    <li><a href="mailto: diksonmanganye179@gmail.com" target="_blank" class="dropdown-item" >Email</a></li>
-                </ul>
-            </div>    
+                <button class="dropbtn">Website Developer</button>
+                <div class="dropdown-content">
+                    <div>
+                        <a href="https://www.linkedin.com/in/dikson-manganye-a8b773213/" target="_blank" class="dropdown-item" >linkedin</a>
+                        <a href="https://diksonivyson.github.io/My_Portfolio/" target="_blank" class="dropdown-item" >Portfolio</a>
+                    </div>
+                    <div>
+                        <a href="https://github.com/DiksonIvySon" target="_blank" class="dropdown-item" >Github</a>
+                        <a href="mailto: diksonmanganye179@gmail.com" target="_blank" class="dropdown-item" >Email</a>
+                    </div>   
+                </div>
+            </div>
         </div>
         
         <p class="copy-right-container">
