Created a curving section divider and styled it.

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             </div>
         </section>
 
-        <section id="info-Page" class="info-Page pageSection">
-            info-Page
+        <section id="info-page" class="info-page pageSection">
+            <div class="top-dividing-curve"></div>
         </section>
 
         <section id="logging-Page" class="logging-Page pageSection">
