Working the content and layout.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
             <nav>
                 <ul id="primary-navigation"  class="primary-navigation" >
-                    <li class="nav-item"><a id="nav-link" class="nav-link" href="#info-Page">INFORMATION</a></li>
+                    <li class="nav-item"><a id="nav-link" class="nav-link" href="#info-page">INFORMATION</a></li>
                     <li class="nav-item"><a id="nav-link2" class="nav-link" href="#logging-Page">LOGGING</a></li>
                     <li class="nav-item"><a id="nav-link3" class="nav-link" href="#tips-Page">TIPS</a></li>
                 </ul>
@@ -54,6 +54,25 @@
 
         <section id="info-page" class="info-page pageSection">
             <div class="top-dividing-curve"></div>
+            <div class="defining-container">
+                <div class="images">
+                    <img class="main-img" src="" alt="">
+                    <img class="small-top-img" src="" alt="">
+                </div>
+                <div class="defining-info">
+                    <h2>What is a Carbon Footprint?</h2>
+                    <p>Your carbon footprint is the total amount of greenhouse gases, especially carbon dioxide (CO₂), 
+                        released into the atmosphere as a result of your everyday actions — from driving a car and charging 
+                        your phone, to the food you eat and clothes you buy.
+                    </p>
+                    <h2>Why It Matters</h2>
+                    <p>The more CO₂ we emit, the more we contribute to global warming and climate change. Understanding 
+                        your carbon footprint is the first step to reducing it and creating a more sustainable future.
+                    </p>
+                </div>
+            </div>
+
+            <div class="states container"></div>
         </section>
 
         <section id="logging-Page" class="logging-Page pageSection">
