Worked on the stats layout

--- a/index.html
+++ b/index.html
@@ -72,7 +72,22 @@
                 </div>
             </div>
 
-            <div class="states container"></div>
+            <div class="states container">
+                <div class="stat-cards">
+                    <div class="stat-card">
+                        <h3>Global CO₂ Emissions</h3>
+                        <p>36.8 billion tonnes (2025)</p>
+                    </div>
+                    <div class="stat-card">
+                        <h3>Average per Person</h3>
+                        <p>4.8 tonnes/year</p>
+                    </div>
+                    <div class="stat-card">
+                        <h3>South Africa</h3>
+                        <p>~9 tonnes/person/year</p>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section id="logging-Page" class="logging-Page pageSection">
