Woeking on styling and structure.

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             <div class="top-dividing-curve"></div>
             <div class="defining-container">
                 <div class="images">
-                    <img class="main-img" src="" alt="">
-                    <img class="small-top-img" src="" alt="">
+                    <img class="main-img" src="Images/0_P_jXJi7swokxtBg6.bin" alt="">
+                    <img class="small-top-img" src="Images/images (1).jpeg" alt="">
                 </div>
                 <div class="defining-info">
                     <h2>What is a Carbon Footprint?</h2>
