Woeking on styling and structure.

--- a/index.html
+++ b/index.html
@@ -54,25 +54,31 @@
 
         <section id="info-page" class="info-page pageSection">
             <div class="top-dividing-curve"></div>
-            <div class="defining-container">
+            <div class="defining-container section-padding">
                 <div class="images">
                     <img class="main-img" src="Images/0_P_jXJi7swokxtBg6.bin" alt="">
-                    <img class="small-top-img" src="Images/images (1).jpeg" alt="">
+                    <!-- <img class="small-top-img" src="Images/emissions-reduction-image.jpg" alt=""> -->
                 </div>
                 <div class="defining-info">
                     <h2>What is a Carbon Footprint?</h2>
+                    <hr>
                     <p>Your carbon footprint is the total amount of greenhouse gases, especially carbon dioxide (CO₂), 
                         released into the atmosphere as a result of your everyday actions — from driving a car and charging 
                         your phone, to the food you eat and clothes you buy.
                     </p>
                     <h2>Why It Matters</h2>
+                    <hr>
                     <p>The more CO₂ we emit, the more we contribute to global warming and climate change. Understanding 
                         your carbon footprint is the first step to reducing it and creating a more sustainable future.
                     </p>
                 </div>
             </div>
 
-            <div class="states container">
+            <div class="small-top-img section-padding">
+                <img src="Images/emissions-reduction-image.jpg" alt="">
+            </div>
+
+            <div class="states-container section-padding">
                 <div class="stat-cards">
                     <div class="stat-card">
                         <h3>Global CO₂ Emissions</h3>
