Woeking on styling and structure.

--- a/index.html
+++ b/index.html
@@ -81,16 +81,25 @@
             <div class="states-container section-padding">
                 <div class="stat-cards">
                     <div class="stat-card">
+                        <div>
+                            <h1>36.8</h1>
+                            <p>billion tonnes (2025)</p>
+                        </div>
                         <h3>Global CO₂ Emissions</h3>
-                        <p>36.8 billion tonnes (2025)</p>
                     </div>
                     <div class="stat-card">
+                        <div>
+                            <h1>4.8</h1>
+                            <p>tonnes/year</p>
+                        </div>
                         <h3>Average per Person</h3>
-                        <p>4.8 tonnes/year</p>
                     </div>
                     <div class="stat-card">
+                        <div>
+                            <h1>9</h1>
+                            <p>tonnes/person/year</p>
+                        </div>
                         <h3>South Africa</h3>
-                        <p>~9 tonnes/person/year</p>
                     </div>
                 </div>
             </div>
