Worked on the section images.

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <section id="info-page" class="info-page pageSection">
             <div class="top-dividing-curve"></div>
             <div class="defining-container section-padding">
-                <div class="images">
-                    <img class="main-img" src="Images/0_P_jXJi7swokxtBg6.bin" alt="">
+                <div class="main-img">
+                    <img src="Images/0_P_jXJi7swokxtBg6.bin" alt="">
                     <!-- <img class="small-top-img" src="Images/emissions-reduction-image.jpg" alt=""> -->
                 </div>
                 <div class="defining-info">
@@ -80,21 +80,21 @@
 
             <div class="states-container section-padding">
                 <div class="stat-cards">
-                    <div class="stat-card">
+                    <div class="stat-card stat-card1">
                         <div>
                             <h1>36.8</h1>
                             <p>billion tonnes (2025)</p>
                         </div>
                         <h3>Global CO₂ Emissions</h3>
                     </div>
-                    <div class="stat-card">
+                    <div class="stat-card stat-card2">
                         <div>
                             <h1>4.8</h1>
                             <p>tonnes/year</p>
                         </div>
                         <h3>Average per Person</h3>
                     </div>
-                    <div class="stat-card">
+                    <div class="stat-card stat-card3">
                         <div>
                             <h1>9</h1>
                             <p>tonnes/person/year</p>
