Working on the tips page content.

--- a/index.html
+++ b/index.html
@@ -109,8 +109,144 @@
             logger-page
         </section>   
         
-        <section id="tips-Page" class="tip-Page pageSection">
-            tips-Page
+        <section id="tips-Page" class="tipsPost-Page tip-Page pageSection">
+            <h1 class="pageHeading">My Latest tips Posts</h1>
+            <div class="scroll-container">
+                <div id="tips-card" class="tips-card">
+                    <div class="tipsPost-image">
+                        <img src="images/average-per-person.jpg" alt="tips post image" style="width:100%">
+                    </div>
+                    <div class="container">
+                      <h2><b>Eat More Plant-Based Meals</b></h2>
+                      <div>
+                        <p class="tips-paragraph">
+                            Reducing meat and dairy can significantly cut your carbon footprint.
+                         </p>
+                         <div class="tipsPost-readMore">
+                            <a href="https://www.wwf.org.uk/updates/how-eating-less-meat-helps-planet">
+                                <button>View tips Post</button></a>
+                         </div>
+                      </div>
+                    </div>
+                </div>
+                <div id="tips-card" class="tips-card">
+                    <div class="tipsPost-image">
+                        <img src="Images/average-per-person.jpg" alt="tips post image" style="width:100%">
+                    </div>
+                    <div class="container">
+                      <h2><b>Reduce Food Waste</b></h2>
+                      <div>
+                        <p class="tips-paragraph">
+                            Nearly one-third of all food is wasted — wasting resources and emitting methane.
+                         </p>
+                         <div class="tipsPost-readMore">
+                            <a href="https://www.epa.gov/recycle/reducing-wasted-food-home"><button>View tips Post</button></a>
+                         </div>
+                      </div>
+                    </div>
+                </div>
+                <div id="tips-card" class="tips-card">
+                    <div class="tipsPost-image">
+                        <img src="images/escape-conference-photo.png" alt="tips post image" style="width:100%">
+                    </div>
+                    <div class="container">
+                      <h2><b>Choose Greener Transport</b></h2>
+                      <div>
+                        <p class="tips-paragraph">
+                            Walk, bike, or take public transport to lower transport-related CO₂.
+                         </p>
+                         <div class="tipsPost-readMore">
+                            <a target="_blank" href="https://www.greenchoices.org/green-living/transport">
+                                <button>View tips Post</button></a>
+                         </div>
+                      </div>
+                    </div>
+                </div>
+                <div id="tips-card" class="tips-card">
+                    <div class="tipsPost-image">
+                        <img src="images/BBD-emmersion-photo.png" alt="tips post image" style="width:100%">
+                    </div>
+                    <div class="container">
+                      <h2><b> Drive Less, Drive Smart</b></h2>
+                      <div>
+                        <p class="tips-paragraph">
+                            Eco-driving and trip planning can reduce emissions and fuel use.
+                         </p>
+                         <div class="tipsPost-readMore">
+                            <a href="https://afdc.energy.gov/conserve/behavior_techniques.html">
+                                <button>View tips Post</button></a>
+                         </div>
+                      </div>
+                    </div>
+                </div>
+                <div id="tips-card" class="tips-card">
+                    <div class="tipsPost-image">
+                        <img src="images/UMUZI-maria-marina.png" alt="tips post image" style="width:100%">
+                    </div>
+                    <div class="container">
+                      <h2><b>Use Energy-Efficient Appliances</b></h2>
+                      <div>
+                        <p class="tips-paragraph">
+                            Efficient appliances consume less electricity and save money.
+                         </p>
+                         <div class="tipsPost-readMore">
+                            <a href="https://www.energy.gov/energysaver/energy-efficient-home-design"><button>View tips Post</button></a>
+                         </div>
+                      </div>
+                    </div>
+                </div>
+                <div id="tips-card" class="tips-card">
+                    <div class="tipsPost-image">
+                        <img src="images/escape-conference-photo.png" alt="tips post image" style="width:100%">
+                    </div>
+                    <div class="container">
+                      <h2><b>Switch Off Unused Devices</b></h2>
+                      <div>
+                        <p class="tips-paragraph">
+                            Standby power ("vampire energy") wastes electricity.
+                         </p>
+                         <div class="tipsPost-readMore">
+                            <a target="_blank" href="https://www.nrdc.org/stories/how-save-energy">
+                                <button>View tips Post</button></a>
+                         </div>
+                      </div>
+                    </div>
+                </div>
+                <div id="tips-card" class="tips-card">
+                    <div class="tipsPost-image">
+                        <img src="images/escape-conference-photo.png" alt="tips post image" style="width:100%">
+                    </div>
+                    <div class="container">
+                      <h2><b>Buy Less, Choose Well</b></h2>
+                      <div>
+                        <p class="tips-paragraph">
+                            Sustainable fashion and smart shopping reduce emissions and waste.
+                         </p>
+                         <div class="tipsPost-readMore">
+                            <a target="_blank" href="https://goodonyou.eco/why-sustainable-fashion-matters/">
+                                <button>View tips Post</button></a>
+                         </div>
+                      </div>
+                    </div>
+                </div>
+                <div id="tips-card" class="tips-card">
+                    <div class="tipsPost-image">
+                        <img src="images/escape-conference-photo.png" alt="tips post image" style="width:100%">
+                    </div>
+                    <div class="container">
+                      <h2><b>Reuse, Recycle, and Donate</b></h2>
+                      <div>
+                        <p class="tips-paragraph">
+                            Recycling reduces landfill emissions and saves raw materials.
+                         </p>
+                         <div class="tipsPost-readMore">
+                            <a target="_blank" href="https://www.epa.gov/recycle/recycling-basics">
+                                <button>View tips Post</button></a>
+                         </div>
+                      </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
