Fixed typos and grammar.

--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
         </section>   
         
         <section id="tips-Page" class="tipsPost-Page tip-Page pageSection">
-            <h1 class="pageHeading">My Latest tips Posts</h1>
+            <h1 class="pageHeading">Tips</h1>
+            <p class="tip-page-slogan">Heal the world, make it a better place for you and for me and the entire human race.</p>
             <div class="scroll-container">
                 <div id="tips-card" class="tips-card">
                     <div class="tipsPost-image">
