Working on the styling and layout.

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
                     <h1>Footprint</h1>
                     <h1>Logger</h1>
                 </div>
-                <p>Track your daily impact.</p>
-                <p>Reduce your carbon footprint.</p>
+                <p>Track your daily impact. <br> Reduce your carbon footprint.</p>
                 <a href="#logging-Page">
                     <button>Start Logging</button>
                 </a>
@@ -113,7 +112,7 @@
             <h1 class="pageHeading">Tips</h1>
             <p class="tip-page-slogan">Heal the world, make it a better place for you and for me and the entire human race.</p>
             <div class="scroll-container">
-                <div id="tips-card" class="tips-card">
+                <div class="tips-card">
                     <div class="tipsPost-image">
                         <img src="images/average-per-person.jpg" alt="tips post image" style="width:100%">
                     </div>
@@ -130,7 +129,7 @@
                       </div>
                     </div>
                 </div>
-                <div id="tips-card" class="tips-card">
+                <div class="tips-card">
                     <div class="tipsPost-image">
                         <img src="Images/average-per-person.jpg" alt="tips post image" style="width:100%">
                     </div>
@@ -146,7 +145,7 @@
                       </div>
                     </div>
                 </div>
-                <div id="tips-card" class="tips-card">
+                <div class="tips-card">
                     <div class="tipsPost-image">
                         <img src="images/escape-conference-photo.png" alt="tips post image" style="width:100%">
                     </div>
@@ -163,7 +162,7 @@
                       </div>
                     </div>
                 </div>
-                <div id="tips-card" class="tips-card">
+                <div class="tips-card">
                     <div class="tipsPost-image">
                         <img src="images/BBD-emmersion-photo.png" alt="tips post image" style="width:100%">
                     </div>
@@ -180,7 +179,7 @@
                       </div>
                     </div>
                 </div>
-                <div id="tips-card" class="tips-card">
+                <div class="tips-card">
                     <div class="tipsPost-image">
                         <img src="images/UMUZI-maria-marina.png" alt="tips post image" style="width:100%">
                     </div>
@@ -196,7 +195,7 @@
                       </div>
                     </div>
                 </div>
-                <div id="tips-card" class="tips-card">
+                <div class="tips-card">
                     <div class="tipsPost-image">
                         <img src="images/escape-conference-photo.png" alt="tips post image" style="width:100%">
                     </div>
@@ -213,7 +212,7 @@
                       </div>
                     </div>
                 </div>
-                <div id="tips-card" class="tips-card">
+                <div class="tips-card">
                     <div class="tipsPost-image">
                         <img src="images/escape-conference-photo.png" alt="tips post image" style="width:100%">
                     </div>
@@ -230,7 +229,7 @@
                       </div>
                     </div>
                 </div>
-                <div id="tips-card" class="tips-card">
+                <div class="tips-card">
                     <div class="tipsPost-image">
                         <img src="images/escape-conference-photo.png" alt="tips post image" style="width:100%">
                     </div>
