Commented out content from the section.

--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
                 </div>
             </div>
 
-            <div class="small-top-img section-padding">
+            <!-- <div class="small-top-img section-padding">
                 <img src="Images/emissions-reduction-image.jpg" alt="">
-            </div>
+            </div> -->
+
+            <!-- <div><h1 class="section-heading">Current stats</h1></div> -->
 
             <div class="states-container section-padding">
                 <div class="stat-cards">
