Added images to the tips cards.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="scroll-container">
                 <div class="tips-card">
                     <div class="tipsPost-image">
-                        <img src="images/average-per-person.jpg" alt="tips post image" style="width:100%">
+                        <img src="Images/tips-image-1.jpeg" alt="tips post image" style="width:100%">
                     </div>
                     <div class="container">
                       <h2><b>Eat More Plant-Based Meals</b></h2>
@@ -133,7 +133,7 @@
                 </div>
                 <div class="tips-card">
                     <div class="tipsPost-image">
-                        <img src="Images/average-per-person.jpg" alt="tips post image" style="width:100%">
+                        <img src="Images/tips-image-2.jpeg" alt="tips post image" style="width:100%">
                     </div>
                     <div class="container">
                       <h2><b>Reduce Food Waste</b></h2>
@@ -149,7 +149,7 @@
                 </div>
                 <div class="tips-card">
                     <div class="tipsPost-image">
-                        <img src="images/escape-conference-photo.png" alt="tips post image" style="width:100%">
+                        <img src="Images/tips-image-3.jpeg" alt="tips post image" style="width:100%">
                     </div>
                     <div class="container">
                       <h2><b>Choose Greener Transport</b></h2>
@@ -166,7 +166,7 @@
                 </div>
                 <div class="tips-card">
                     <div class="tipsPost-image">
-                        <img src="images/BBD-emmersion-photo.png" alt="tips post image" style="width:100%">
+                        <img src="Images/tips-image-4.jpeg" alt="tips post image" style="width:100%">
                     </div>
                     <div class="container">
                       <h2><b> Drive Less, Drive Smart</b></h2>
@@ -183,7 +183,7 @@
                 </div>
                 <div class="tips-card">
                     <div class="tipsPost-image">
-                        <img src="images/UMUZI-maria-marina.png" alt="tips post image" style="width:100%">
+                        <img src="Images/tips-image-5.jpeg" alt="tips post image" style="width:100%">
                     </div>
                     <div class="container">
                       <h2><b>Use Energy-Efficient Appliances</b></h2>
@@ -199,7 +199,7 @@
                 </div>
                 <div class="tips-card">
                     <div class="tipsPost-image">
-                        <img src="images/escape-conference-photo.png" alt="tips post image" style="width:100%">
+                        <img src="Images/tips-image-6.jpeg" alt="tips post image" style="width:100%">
                     </div>
                     <div class="container">
                       <h2><b>Switch Off Unused Devices</b></h2>
@@ -216,7 +216,7 @@
                 </div>
                 <div class="tips-card">
                     <div class="tipsPost-image">
-                        <img src="images/escape-conference-photo.png" alt="tips post image" style="width:100%">
+                        <img src="Images/tips-image-7.jpeg" alt="tips post image" style="width:100%">
                     </div>
                     <div class="container">
                       <h2><b>Buy Less, Choose Well</b></h2>
@@ -233,7 +233,7 @@
                 </div>
                 <div class="tips-card">
                     <div class="tipsPost-image">
-                        <img src="images/escape-conference-photo.png" alt="tips post image" style="width:100%">
+                        <img src="Images/tips-image-8.jpeg" alt="tips post image" style="width:100%">
                     </div>
                     <div class="container">
                       <h2><b>Reuse, Recycle, and Donate</b></h2>
