Working on styling.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div>
             <div class="logo">
                 <div>
-                    <div class="logo-name">
+                    <div>
                         <a href="#firstPage">
                             <h1>FootPrint</h1>
-                            <h3 class="italic-surname">Logger</h3>
+                            <h3>Logger</h3>
                         </a>
                     </div>
                 </div>
