--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
           crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Script-->
-    <script src="src/footprint.js" defer></script>
+     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="body">
     <header>
@@ -344,5 +344,8 @@
             Copyright © 2025 <a target="_blank" href="https://diksonivyson.github.io/My_Portfolio/" class="web-author">Dikson Manganye</a>. All rights reserved
         </p>
     </footer>
+
+    <!-- Script-->
+    <script src="src/footprint.js" defer></script>
 </body>
 </html>
