--- a/index.html
+++ b/index.html
@@ -106,22 +106,24 @@
             </div>
         </section>
 
-        <section id="logging-Page" class="logging-Page pageSection">
+        <section id="logging-Page" class="logging-page pageSection">
             <h1>Track Your Carbon Footprint</h1>
-            <div>
+            <div class="logging-main-content">
                 <div class="user-inputs">
                     <form id="activity-form">
-                        <select id="activity-type">
-                            <option value="car" data-category="transport">Car Travel (km)</option>
-                            <option value="bus" data-category="transport">Bus Travel (km)</option>
-                            <option value="flight" data-category="transport">Flight (km)</option>
-                            <option value="meat" data-category="food">Meat Consumption (kg)</option>
-                            <option value="dairy" data-category="food">Dairy Consumption (kg)</option>
-                            <option value="vegetables" data-category="food">Vegetables (kg)</option>
-                            <option value="electricity" data-category="energy">Electricity (kWh)</option>
-                            <option value="gas" data-category="energy">Gas Use (m3)</option>
-                        </select>
-                        <input type="number" id="activity-amount" placeholder="Amount" required>
+                        <div>
+                            <select id="activity-type">
+                                <option value="car" data-category="transport">Car Travel (km)</option>
+                                <option value="bus" data-category="transport">Bus Travel (km)</option>
+                                <option value="flight" data-category="transport">Flight (km)</option>
+                                <option value="meat" data-category="food">Meat Consumption (kg)</option>
+                                <option value="dairy" data-category="food">Dairy Consumption (kg)</option>
+                                <option value="vegetables" data-category="food">Vegetables (kg)</option>
+                                <option value="electricity" data-category="energy">Electricity (kWh)</option>
+                                <option value="gas" data-category="energy">Gas Use (m3)</option>
+                            </select>
+                            <input type="number" id="activity-amount" placeholder="Amount" required>
+                        </div>
                         <button type="submit">Add Activity</button>
                     </form>
 
@@ -134,13 +136,14 @@
                         <option value="energy">Energy</option>
                         </select>
                     </div>
+
+                    <h2>Activities</h2>
+                     <div id="activity-log-container"></div>
                 </div>
                 <div class="visualization">
                     <div class="total-section">
                         <strong>Total CO₂ Emissions:</strong> <span id="total-emissions">0</span> kg
                     </div>
-
-                    <div id="activity-log-container"></div>
 
                     <div class="chart-container">
                         <canvas id="emissionsChart"></canvas>
