Working on structure and styling.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </section>
 
         <section id="logging-Page" class="logging-page pageSection">
-            <h1>Track Your Carbon Footprint</h1>
+            <h1 class="pageHeading">Track Your Carbon Footprint</h1>
             <div class="logging-main-content">
                 <div class="user-inputs">
                     <form id="activity-form">
